--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -5,8 +5,8 @@
 1|n|216|2350|neat|| d|
 </span></p><UL><LI>Р<LI>Э<LI>Д<LI>В</UL><DL><DT>Потребляемая мощность:<DD>0 Вт<DT>О:<DD>0<DT>Ч:<DD>0<DT>Д:<DD>1<DT>П:<DD>З<DT>Вес:<DD>1 кг</DL><p><span class="addt">||/img/pic/e/small/jpg|/img/pic/e/big/
 </span></p><UL><LI>Д<LI>В</UL><p><span class="addt">
-</span></p><UL><LI>.<LI>.</UL>
 <DL><DT>П:<DD>0<DT>О:<DD>0</DL>
+</span></p><UL><LI>.</UL><p><span class="addt">
  <span class=art>арт. </span>
 <table cellpadding=0 cellspacing=0 border=0><tr><td>красный<td class=art>арт. 2</table>
 {obj_fld}{51}{42}
