--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,4 @@
+<DT>11 мар: <DD><a href="/catalog/cat244.shtml" title="Новые товары"><span class="title">Штангенциркули</span><span class="dop"> HOBBI</span></a><br>
 <DT>03 мар: <DD><a href="/catalog/cat424.shtml" title="Снижены цены на три вида валиков"><span class="title">Малярные валики:</span><span class="dop"></span></a><br>&emsp;&emsp;&emsp;
   <a href="/catalog/cat142.shtml" title="Цены снижены"><span class="title">Termofusion</span></a>,
   <a href="/catalog/cat147.shtml" title="Цены снижены"><span class="title">Грейтекс</span></a>,
