--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,17 +1,14 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>29 мар: <DD><a href="/catalog/cat361.shtml" title="Новые товары"><span class="title">Моющие средства</span><span class="dop"> "Актив"</span></a><br>
+  <DT>28 мар: <DD><a href="/catalog/cat131.shtml" title="Новые товары"><span class="title">Клещи</span><span class="dop"> HARDAX и MATRIX</span></a><br>
+  <DT>25 мар: <DD><a href="/catalog/cat259.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Наборы отверток</span><span class="dop"></span></a><br>
   <DT>23 мар: <DD><a href="/catalog/cat89.shtml"  title="Цены снижены"><span class="title">Краги сварщика</span><span class="dop"> спилковые</span></a><br>
   <DT>23 мар: <DD><a href="/catalog/cat264.shtml" title="Цены снижены"><span class="title">Очки газосварщика</span><span class="dop"> 3H1-Г2</span></a><br>
   <DT>21 мар: <DD><a href="/catalog/cat361.shtml" title="Новый товар"><span class="title">Моющее средство</span><span class="dop"> ARCTIS D-55</span></a><br>
   <DT>21 мар: <DD><a href="/catalog/cat212.shtml" title="Цены снижены"><span class="title">Уровни</span><span class="dop"> "Рельс"</span></a> и <a href="/catalog/cat301.shtml" title="Цены снижены"><span class="dop"> METRIC TILER</span></a><br>
   <DT>21 мар: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож 18 мм усил.</span><span class="dop"> "Basic-auto"</span></a><br>
   <DT>18 мар: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по керамограниту</span><span class="dop"> БАРС</span></a><br>
-  <DT>18 мар: <DD><a href="/catalog/cat128.shtml" title="Новые товары"><span class="title">Ножовки по дереву</span><span class="dop"> SPARTA</span></a><br>
-  <DT>18 мар: <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок навесной хромированный</span><span class="dop"></span></a><br>
-  <DT>15 мар: <DD><a href="/catalog/cat115.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Сетка (лента)</span><span class="dop"> "серпянка"</span></a><br>
-  <DT>14 мар: <DD><a href="/catalog/cat137.shtml" title="Новые товары"><span class="title">Топоры-колуны</span><span class="dop"> БАРС</span></a><br>
-  <DT>14 мар: <DD><a href="/catalog/cat392.shtml" title="Новый товар"><span class="title">Ножницы газонные</span><span class="dop"> PALISAD</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
