--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,8 @@
+<DT>18 мар: <DD><a href="/catalog/cat128.shtml" title="Новые товары"><span class="title">Ножовки по дереву</span><span class="dop"> SPARTA</span></a><br>
+<DT>18 мар: <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок навесной хромированный</span><span class="dop"></span></a><br>
+<DT>15 мар: <DD><a href="/catalog/cat115.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Сетка (лента)</span><span class="dop"> "серпянка"</span></a><br>
+<DT>14 мар: <DD><a href="/catalog/cat137.shtml" title="Новые товары"><span class="title">Топоры-колуны</span><span class="dop"> БАРС</span></a><br>
+<DT>14 мар: <DD><a href="/catalog/cat392.shtml" title="Новый товар"><span class="title">Ножницы газонные</span><span class="dop"> PALISAD</span></a><br>
 <DT>11 мар: <DD><a href="/catalog/cat244.shtml" title="Новые товары"><span class="title">Штангенциркули</span><span class="dop"> HOBBI</span></a><br>
 <DT>03 мар: <DD><a href="/catalog/cat424.shtml" title="Снижены цены на три вида валиков"><span class="title">Малярные валики:</span><span class="dop"></span></a><br>&emsp;&emsp;&emsp;
   <a href="/catalog/cat142.shtml" title="Цены снижены"><span class="title">Termofusion</span></a>,
