--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>12 апр: <DD><a href="/catalog/cat228.shtml" title="Новые товары"><span class="title">Нетканое полотно</span><span class="dop"> НЕТКОЛ</span></a><br>
+  <DT>06 апр: <DD><a href="/catalog/cat453.shtml" title="Цены снижены"><span class="title">Тех. ткани и ветошь</span><span class="dop"></span></a><br>
   <DT>30 мар: <DD><a href="/catalog/cat452.shtml" title="Новые товары"><span class="title">Светодиодные лампы</span><span class="dop"> "Онлайт"</span></a><br>
   <DT>29 мар: <DD><a href="/catalog/cat361.shtml" title="Новые товары"><span class="title">Моющие средства</span><span class="dop"> "Актив"</span></a><br>
   <DT>28 мар: <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span><span class="dop"> Profpur, Zigger</span></a><br>
