8mm on gdrive+1

--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,6 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>12 апр: <DD><a href="/catalog/cat228.shtml" title="Новые товары"><span class="title">Нетканое полотно</span><span class="dop"> НЕТКОЛ</span></a><br>
+  <DT>07 апр: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож строительный</span><span class="dop"> универсальный</span></a><br>
+  <DT>07 апр: <DD><a href="/catalog/cat224.shtml" title="Новые товары"><span class="title">Ящики для инстр.</span><span class="dop"> TRUPER</span></a><br>
   <DT>06 апр: <DD><a href="/catalog/cat453.shtml" title="Цены снижены"><span class="title">Тех. ткани и ветошь</span><span class="dop"></span></a><br>
   <DT>30 мар: <DD><a href="/catalog/cat452.shtml" title="Новые товары"><span class="title">Светодиодные лампы</span><span class="dop"> "Онлайт"</span></a><br>
   <DT>29 мар: <DD><a href="/catalog/cat361.shtml" title="Новые товары"><span class="title">Моющие средства</span><span class="dop"> "Актив"</span></a><br>
@@ -8,12 +10,6 @@
   <DT>28 мар: <DD><a href="/catalog/cat414.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Буры SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
   <DT>25 мар: <DD><a href="/catalog/cat131.shtml" title="Новые товары"><span class="title">Клещи</span><span class="dop"> HARDAX и MATRIX</span></a><br>
   <DT>24 мар: <DD><a href="/catalog/cat259.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Наборы отверток</span><span class="dop"></span></a><br>
-  <DT>23 мар: <DD><a href="/catalog/cat89.shtml"  title="Цены снижены"><span class="title">Краги сварщика</span><span class="dop"> спилковые</span></a><br>
-  <DT>22 мар: <DD><a href="/catalog/cat264.shtml" title="Цены снижены"><span class="title">Очки газосварщика</span><span class="dop"> 3H1-Г2</span></a><br>
-  <DT>21 мар: <DD><a href="/catalog/cat361.shtml" title="Новый товар"><span class="title">Моющее средство</span><span class="dop"> ARCTIS D-55</span></a><br>
-  <DT>21 мар: <DD><a href="/catalog/cat212.shtml" title="Цены снижены"><span class="title">Уровни</span><span class="dop"> "Рельс"</span></a> и <a href="/catalog/cat301.shtml" title="Цены снижены"><span class="dop"> METRIC TILER</span></a><br>
-  <DT>21 мар: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож 18 мм усил.</span><span class="dop"> "Basic-auto"</span></a><br>
-  <DT>18 мар: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по керамограниту</span><span class="dop"> БАРС</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
