--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,9 @@
+<DT>23 мар: <DD><a href="/catalog/cat89.shtml"  title="Цены снижены"><span class="title">Краги сварщика</span><span class="dop"> спилковые</span></a><br>
+<DT>22 мар: <DD><a href="/catalog/cat264.shtml" title="Цены снижены"><span class="title">Очки газосварщика</span><span class="dop"> 3H1-Г2</span></a><br>
+<DT>21 мар: <DD><a href="/catalog/cat361.shtml" title="Новый товар"><span class="title">Моющее средство</span><span class="dop"> ARCTIS D-55</span></a><br>
+<DT>21 мар: <DD><a href="/catalog/cat212.shtml" title="Цены снижены"><span class="title">Уровни</span><span class="dop"> "Рельс"</span></a> и <a href="/catalog/cat301.shtml" title="Цены снижены"><span class="dop"> METRIC TILER</span></a><br>
+<DT>21 мар: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож 18 мм усил.</span><span class="dop"> "Basic-auto"</span></a><br>
+<DT>18 мар: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по керамограниту</span><span class="dop"> БАРС</span></a><br>
 <DT>18 мар: <DD><a href="/catalog/cat128.shtml" title="Новые товары"><span class="title">Ножовки по дереву</span><span class="dop"> SPARTA</span></a><br>
 <DT>18 мар: <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок навесной хромированный</span><span class="dop"></span></a><br>
 <DT>15 мар: <DD><a href="/catalog/cat115.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Сетка (лента)</span><span class="dop"> "серпянка"</span></a><br>
