8mm on gdrive+3

--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,6 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>12 апр: <DD><a href="/catalog/cat228.shtml" title="Новые товары"><span class="title">Нетканое полотно</span><span class="dop"> НЕТКОЛ</span></a><br>
+  <DT>11 апр: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтажная пена</span><span class="dop"> "МОМЕНТ" 65</span></a><br>
+  <DT>08 апр: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены"><span class="title">Диски алмазные</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>08 апр: <DD><a href="/catalog/cat191.shtml" title="Цены снижены"><span class="title">Пистолет для пены</span><span class="dop"> BLAST</span></a><br>
   <DT>07 апр: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож строительный</span><span class="dop"> универсальный</span></a><br>
   <DT>07 апр: <DD><a href="/catalog/cat224.shtml" title="Новые товары"><span class="title">Ящики для инстр.</span><span class="dop"> TRUPER</span></a><br>
   <DT>06 апр: <DD><a href="/catalog/cat453.shtml" title="Цены снижены"><span class="title">Тех. ткани и ветошь</span><span class="dop"></span></a><br>
