--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,18 +1,17 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 апр: <DD><a href="/catalog/cat454.shtml" title="Новые товары"><span class="title">Смеси и клей строительные</span><span class="dop"></span></a><br>
+  <DT>15 апр: <DD><a href="/catalog/cat22.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Монтажный пистолет и патроны</span><span class="dop"></span></a><br>
+  <DT>15 апр: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
+  <DT>15 апр: <DD><a href="/catalog/cat155.shtml" title="Новый товар"><span class="title">Гладилка нерж. ст.</span><span class="dop"> REMOCOLOR</span></a><br>
+  <DT>14 апр: <DD><a href="/catalog/cat29.shtml"  title="Новые товары"><span class="title">Пильные диски</span><span class="dop"> БАРС</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat228.shtml" title="Новые товары"><span class="title">Нетканое полотно</span><span class="dop"> НЕТКОЛ</span></a><br>
   <DT>11 апр: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтажная пена</span><span class="dop"> "МОМЕНТ" 65</span></a><br>
   <DT>08 апр: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены"><span class="title">Диски алмазные</span><span class="dop"> HAGWERT</span></a><br>
   <DT>08 апр: <DD><a href="/catalog/cat191.shtml" title="Цены снижены"><span class="title">Пистолет для пены</span><span class="dop"> BLAST</span></a><br>
-  <DT>07 апр: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож строительный</span><span class="dop"> универсальный</span></a><br>
+  <DT>07 апр: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож строит.</span><span class="dop"> универсальный</span></a><br>
   <DT>07 апр: <DD><a href="/catalog/cat224.shtml" title="Новые товары"><span class="title">Ящики для инстр.</span><span class="dop"> TRUPER</span></a><br>
   <DT>06 апр: <DD><a href="/catalog/cat453.shtml" title="Цены снижены"><span class="title">Тех. ткани и ветошь</span><span class="dop"></span></a><br>
-  <DT>30 мар: <DD><a href="/catalog/cat452.shtml" title="Новые товары"><span class="title">Светодиодные лампы</span><span class="dop"> "Онлайт"</span></a><br>
-  <DT>29 мар: <DD><a href="/catalog/cat361.shtml" title="Новые товары"><span class="title">Моющие средства</span><span class="dop"> "Актив"</span></a><br>
-  <DT>28 мар: <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span><span class="dop"> Profpur, Zigger</span></a><br>
-  <DT>28 мар: <DD><a href="/catalog/cat414.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Буры SDS Plus</span><span class="dop"> HAGWERT</span></a><br>
-  <DT>25 мар: <DD><a href="/catalog/cat131.shtml" title="Новые товары"><span class="title">Клещи</span><span class="dop"> HARDAX и MATRIX</span></a><br>
-  <DT>24 мар: <DD><a href="/catalog/cat259.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Наборы отверток</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
