--- a/csv/000res/xref.htm
+++ b/csv/000res/xref.htm
@@ -9,6 +9,11 @@
 </head>
 <body>
 ==============================
+Альтернативный шаблон:
+<div class="ref">{REL_CAT}</div>
+Свойства для сортировки:
+{1,2,3}
+==============================
 <div class="t"><div class="t2">table</div></div><div class="t"><div class="t2">cblock</div></div>
 <div class="t3">table</div><div class="t3">cblock</div>
 ==============================
