--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>21 апр: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
+  <DT>21 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик акриловый</span><span class="dop"> ZIGGER PF</span></a><br>
   <DT>20 апр: <DD><a href="/catalog/cat454.shtml" title="Новые товары"><span class="title">Смеси и клей строительные</span><span class="dop"></span></a><br>
   <DT>15 апр: <DD><a href="/catalog/cat22.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Монтажный пистолет и патроны</span><span class="dop"></span></a><br>
   <DT>15 апр: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
