--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>22 апр: <DD><a href="/catalog/cat461.shtml" title="Новые товары"><span class="title">Лента перфорированная</span><span class="dop">, цинк</span></a><br>
   <DT>21 апр: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
   <DT>21 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик акриловый</span><span class="dop"> ZIGGER PF</span></a><br>
   <DT>20 апр: <DD><a href="/catalog/cat454.shtml" title="Новые товары"><span class="title">Смеси и клей строительные</span><span class="dop"></span></a><br>
@@ -9,11 +10,6 @@
   <DT>14 апр: <DD><a href="/catalog/cat29.shtml"  title="Новые товары"><span class="title">Пильные диски</span><span class="dop"> БАРС</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat228.shtml" title="Новые товары"><span class="title">Нетканое полотно</span><span class="dop"> НЕТКОЛ</span></a><br>
   <DT>11 апр: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтажная пена</span><span class="dop"> "МОМЕНТ" 65</span></a><br>
-  <DT>08 апр: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены"><span class="title">Диски алмазные</span><span class="dop"> HAGWERT</span></a><br>
-  <DT>08 апр: <DD><a href="/catalog/cat191.shtml" title="Цены снижены"><span class="title">Пистолет для пены</span><span class="dop"> BLAST</span></a><br>
-  <DT>07 апр: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож строит.</span><span class="dop"> универсальный</span></a><br>
-  <DT>07 апр: <DD><a href="/catalog/cat224.shtml" title="Новые товары"><span class="title">Ящики для инстр.</span><span class="dop"> TRUPER</span></a><br>
-  <DT>06 апр: <DD><a href="/catalog/cat453.shtml" title="Цены снижены"><span class="title">Тех. ткани и ветошь</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
