--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,8 @@
+<DT>08 апр: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены"><span class="title">Диски алмазные</span><span class="dop"> HAGWERT</span></a><br>
+<DT>08 апр: <DD><a href="/catalog/cat191.shtml" title="Цены снижены"><span class="title">Пистолет для пены</span><span class="dop"> BLAST</span></a><br>
+<DT>07 апр: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож строит.</span><span class="dop"> универсальный</span></a><br>
+<DT>07 апр: <DD><a href="/catalog/cat224.shtml" title="Новые товары"><span class="title">Ящики для инстр.</span><span class="dop"> TRUPER</span></a><br>
+<DT>06 апр: <DD><a href="/catalog/cat453.shtml" title="Цены снижены"><span class="title">Тех. ткани и ветошь</span><span class="dop"></span></a><br>
 <DT>30 мар: <DD><a href="/catalog/cat452.shtml" title="Новые товары"><span class="title">Светодиодные лампы</span><span class="dop"> "Онлайт"</span></a><br>
 <DT>29 мар: <DD><a href="/catalog/cat361.shtml" title="Новые товары"><span class="title">Моющие средства</span><span class="dop"> "Актив"</span></a><br>
 <DT>28 мар: <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span><span class="dop"> Profpur, Zigger</span></a><br>
