--- a/csv/000res/xref.htm
+++ b/csv/000res/xref.htm
@@ -9,6 +9,13 @@
 </head>
 <body>
 ==============================
+Грунтовка --> на разделы Кисти и Валики
+Шпаклевки и Штукатурки --> на раздел Шпатели и страницу Кельмы
+Шпаклевки и Штукатурки <-- из всех страниц Шпателей и страницы Кельмы
+Крестики в Хозах --> на Клей и Затирки
+Клей <--> Шпатели конкретно гребенка
+перфорированная лента <--> Провода и кабели? Гофра
+==============================
 Альтернативный шаблон:
 <div class="ref">{REL_CAT}</div>
 Свойства для сортировки:
