--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,8 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>12 мая: <DD><a href="/catalog/cat461.shtml" title="Расширен ассортимент"><span class="title">Перфолента монтажная</span><span class="dop"></span></a><br>
   <DT>28 апр: <DD><a href="/catalog/cat462.shtml" title="Новые товары"><span class="title">Крепёжные уголки</span><span class="dop"></span></a><br>
   <DT>22 апр: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетка</span><span class="dop"> MATRIX "Target"</span></a><br>
-  <DT>22 апр: <DD><a href="/catalog/cat461.shtml" title="Новые товары"><span class="title">Лента перфорированная</span><span class="dop">, цинк</span></a><br>
   <DT>21 апр: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
   <DT>21 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик акриловый</span><span class="dop"> ZIGGER PF</span></a><br>
   <DT>20 апр: <DD><a href="/catalog/cat454.shtml" title="Новые товары"><span class="title">Смеси и клей строительные</span><span class="dop"></span></a><br>
