--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>16 мая: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">|Рулетки</span><span class="dop"> ELASTICA</span></a><br>
   <DT>12 мая: <DD><a href="/catalog/cat461.shtml" title="Расширен ассортимент"><span class="title">Перфолента монтажная</span><span class="dop"></span></a><br>
   <DT>28 апр: <DD><a href="/catalog/cat462.shtml" title="Новые товары"><span class="title">Крепёжные уголки</span><span class="dop"></span></a><br>
   <DT>22 апр: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетка</span><span class="dop"> MATRIX "Target"</span></a><br>
