--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,18 +1,16 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>16 мая: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">|Рулетки</span><span class="dop"> ELASTICA</span></a><br>
+  <DT>19 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика</span><span class="dop"> BLAST</span></a><br>
+  <DT>18 мая: <DD><a href="/catalog/cat464.shtml" title="Новые товары"><span class="title">Смеси для устройства полов</span><span class="dop"></span></a><br>
+  <DT>18 мая: <DD><a href="/catalog/cat463.shtml" title="Новые товары"><span class="title">Гидроизоляционные материалы</span><span class="dop"></span></a><br>
+  <DT>17 мая: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Проникающие смазки</span><span class="dop"></span></a><br>
+  <DT>16 мая: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки</span><span class="dop"> ELASTICA</span></a><br>
   <DT>12 мая: <DD><a href="/catalog/cat461.shtml" title="Расширен ассортимент"><span class="title">Перфолента монтажная</span><span class="dop"></span></a><br>
   <DT>28 апр: <DD><a href="/catalog/cat462.shtml" title="Новые товары"><span class="title">Крепёжные уголки</span><span class="dop"></span></a><br>
   <DT>22 апр: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетка</span><span class="dop"> MATRIX "Target"</span></a><br>
   <DT>21 апр: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
   <DT>21 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик акриловый</span><span class="dop"> ZIGGER PF</span></a><br>
   <DT>20 апр: <DD><a href="/catalog/cat454.shtml" title="Новые товары"><span class="title">Смеси и клей строительные</span><span class="dop"></span></a><br>
-  <DT>15 апр: <DD><a href="/catalog/cat22.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Монтажный пистолет и патроны</span><span class="dop"></span></a><br>
-  <DT>15 апр: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
-  <DT>15 апр: <DD><a href="/catalog/cat155.shtml" title="Новый товар"><span class="title">Гладилка нерж. ст.</span><span class="dop"> REMOCOLOR</span></a><br>
-  <DT>14 апр: <DD><a href="/catalog/cat29.shtml"  title="Новые товары"><span class="title">Пильные диски</span><span class="dop"> БАРС</span></a><br>
-  <DT>12 апр: <DD><a href="/catalog/cat228.shtml" title="Новые товары"><span class="title">Нетканое полотно</span><span class="dop"> НЕТКОЛ</span></a><br>
-  <DT>11 апр: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтажная пена</span><span class="dop"> "МОМЕНТ" 65</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
