--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,4 +1,10 @@
 <DT>22 апр: <DD><a href="/catalog/cat461.shtml" title="Новые товары"><span class="title">Лента перфорированная</span><span class="dop">, цинк</span></a><br>
+<DT>15 апр: <DD><a href="/catalog/cat22.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Монтажный пистолет и патроны</span><span class="dop"></span></a><br>
+<DT>15 апр: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
+<DT>15 апр: <DD><a href="/catalog/cat155.shtml" title="Новый товар"><span class="title">Гладилка нерж. ст.</span><span class="dop"> REMOCOLOR</span></a><br>
+<DT>14 апр: <DD><a href="/catalog/cat29.shtml"  title="Новые товары"><span class="title">Пильные диски</span><span class="dop"> БАРС</span></a><br>
+<DT>12 апр: <DD><a href="/catalog/cat228.shtml" title="Новые товары"><span class="title">Нетканое полотно</span><span class="dop"> НЕТКОЛ</span></a><br>
+<DT>11 апр: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтажная пена</span><span class="dop"> "МОМЕНТ" 65</span></a><br>
 <DT>08 апр: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены"><span class="title">Диски алмазные</span><span class="dop"> HAGWERT</span></a><br>
 <DT>08 апр: <DD><a href="/catalog/cat191.shtml" title="Цены снижены"><span class="title">Пистолет для пены</span><span class="dop"> BLAST</span></a><br>
 <DT>07 апр: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож строит.</span><span class="dop"> универсальный</span></a><br>
