--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 мая: <DD><a href="/catalog/cat384.shtml" title="Расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"> KAPRO</span></a><br>
   <DT>19 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика</span><span class="dop"> BLAST</span></a><br>
   <DT>18 мая: <DD><a href="/catalog/cat464.shtml" title="Новые товары"><span class="title">Смеси для устройства полов</span><span class="dop"></span></a><br>
   <DT>18 мая: <DD><a href="/catalog/cat463.shtml" title="Новые товары"><span class="title">Гидроизоляционные материалы</span><span class="dop"></span></a><br>
