--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,12 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>31 мая: <DD><a href="/catalog/cat465.shtml" title="Новые товары"><span class="title">Ключи газовые КТР омедненные</span><span class="dop"></span></a><br>
+  <DT>31 мая: <DD><a href="/catalog/cat466.shtml" title="Новые товары"><span class="title">Ломы-гвоздодеры омедненные</span><span class="dop"></span></a><br>
+  <DT>30 мая: <DD><a href="/catalog/cat175.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Пена монтажная</span><span class="dop"> V6 всесезонная</span></a><br>
+  <DT>28 мая: <DD><a href="/catalog/cat128.shtml" title="Новый товар"><span class="title">Ножовка</span><span class="dop"> по фанере и ДСП</span></a><br>
+  <DT>27 мая: <DD><a href="/catalog/cat83.shtml"  title="Новые товары"><span class="title">Ключи разводные изолир.</span><span class="dop"></span></a><br>
+  <DT>27 мая: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож изолированный прямой</span><span class="dop"></span></a><br>
+  <DT>25 мая: <DD><a href="/catalog/cat244.shtml" title="Новый товар"><span class="title">Штангенциркуль</span><span class="dop"> TRUPER</span></a><br>
   <DT>20 мая: <DD><a href="/catalog/cat384.shtml" title="Расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"> KAPRO</span></a><br>
   <DT>19 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика</span><span class="dop"> BLAST</span></a><br>
   <DT>18 мая: <DD><a href="/catalog/cat464.shtml" title="Новые товары"><span class="title">Смеси для устройства полов</span><span class="dop"></span></a><br>
@@ -8,10 +15,6 @@
   <DT>16 мая: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки</span><span class="dop"> ELASTICA</span></a><br>
   <DT>12 мая: <DD><a href="/catalog/cat461.shtml" title="Расширен ассортимент"><span class="title">Перфолента монтажная</span><span class="dop"></span></a><br>
   <DT>28 апр: <DD><a href="/catalog/cat462.shtml" title="Новые товары"><span class="title">Крепёжные уголки</span><span class="dop"></span></a><br>
-  <DT>22 апр: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетка</span><span class="dop"> MATRIX "Target"</span></a><br>
-  <DT>21 апр: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
-  <DT>21 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик акриловый</span><span class="dop"> ZIGGER PF</span></a><br>
-  <DT>20 апр: <DD><a href="/catalog/cat454.shtml" title="Новые товары"><span class="title">Смеси и клей строительные</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
