--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,4 +1,9 @@
+<DT>26 мая: <DD><a href="/catalog/cat183.shtml" title="Значительно расширен ассортимент"><span class="title">Щетки для УШМ и дрели</span><span class="dop"></span></a><br>
 <DT>22 апр: <DD><a href="/catalog/cat461.shtml" title="Новые товары"><span class="title">Лента перфорированная</span><span class="dop">, цинк</span></a><br>
+<DT>22 апр: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетка</span><span class="dop"> MATRIX "Target"</span></a><br>
+<DT>21 апр: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
+<DT>21 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Герметик акриловый</span><span class="dop"> ZIGGER PF</span></a><br>
+<DT>20 апр: <DD><a href="/catalog/cat454.shtml" title="Новые товары"><span class="title">Смеси и клей строительные</span><span class="dop"></span></a><br>
 <DT>15 апр: <DD><a href="/catalog/cat22.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Монтажный пистолет и патроны</span><span class="dop"></span></a><br>
 <DT>15 апр: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены и расширен ассортимент"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
 <DT>15 апр: <DD><a href="/catalog/cat155.shtml" title="Новый товар"><span class="title">Гладилка нерж. ст.</span><span class="dop"> REMOCOLOR</span></a><br>
