--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,7 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>31 мая: <DD><a href="/catalog/cat465.shtml" title="Новые товары"><span class="title">Ключи газовые КТР омедненные</span><span class="dop"></span></a><br>
+  <DT>03 июн: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска сварщ.</span><span class="dop">/автозатемнение</span></a><br>
   <DT>31 мая: <DD><a href="/catalog/cat466.shtml" title="Новые товары"><span class="title">Ломы-гвоздодеры омедненные</span><span class="dop"></span></a><br>
+  <DT>31 мая: <DD><a href="/catalog/cat465.shtml" title="Новые товары"><span class="title">Ключи газовые КТР омеднен.</span><span class="dop"></span></a><br>
   <DT>30 мая: <DD><a href="/catalog/cat175.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Пена монтажная</span><span class="dop"> V6 всесезонная</span></a><br>
   <DT>28 мая: <DD><a href="/catalog/cat128.shtml" title="Новый товар"><span class="title">Ножовка</span><span class="dop"> по фанере и ДСП</span></a><br>
   <DT>27 мая: <DD><a href="/catalog/cat83.shtml"  title="Новые товары"><span class="title">Ключи разводные изолир.</span><span class="dop"></span></a><br>
@@ -13,8 +14,6 @@
   <DT>18 мая: <DD><a href="/catalog/cat463.shtml" title="Новые товары"><span class="title">Гидроизоляционные материалы</span><span class="dop"></span></a><br>
   <DT>17 мая: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Проникающие смазки</span><span class="dop"></span></a><br>
   <DT>16 мая: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки</span><span class="dop"> ELASTICA</span></a><br>
-  <DT>12 мая: <DD><a href="/catalog/cat461.shtml" title="Расширен ассортимент"><span class="title">Перфолента монтажная</span><span class="dop"></span></a><br>
-  <DT>28 апр: <DD><a href="/catalog/cat462.shtml" title="Новые товары"><span class="title">Крепёжные уголки</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
