--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,4 +1,6 @@
 <DT>26 мая: <DD><a href="/catalog/cat183.shtml" title="Значительно расширен ассортимент"><span class="title">Щетки для УШМ и дрели</span><span class="dop"></span></a><br>
+<DT>12 мая: <DD><a href="/catalog/cat461.shtml" title="Расширен ассортимент"><span class="title">Перфолента монтажная</span><span class="dop"></span></a><br>
+<DT>28 апр: <DD><a href="/catalog/cat462.shtml" title="Новые товары"><span class="title">Крепёжные уголки</span><span class="dop"></span></a><br>
 <DT>22 апр: <DD><a href="/catalog/cat461.shtml" title="Новые товары"><span class="title">Лента перфорированная</span><span class="dop">, цинк</span></a><br>
 <DT>22 апр: <DD><a href="/catalog/cat72.shtml"  title="Новый товар"><span class="title">Рулетка</span><span class="dop"> MATRIX "Target"</span></a><br>
 <DT>21 апр: <DD><a href="/catalog/cat105.shtml" title="Новый товар"><span class="title">Тачка строительная усиленная</span><span class="dop"></span></a><br>
