--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>06 июн: <DD><a href="/catalog/cat467.shtml" title="Новые товары"><span class="title">Битумные мастика и праймер</span><span class="dop"></span></a><br>
   <DT>03 июн: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска сварщ.</span><span class="dop">/автозатемнение</span></a><br>
   <DT>31 мая: <DD><a href="/catalog/cat466.shtml" title="Новые товары"><span class="title">Ломы-гвоздодеры омедненные</span><span class="dop"></span></a><br>
   <DT>31 мая: <DD><a href="/catalog/cat465.shtml" title="Новые товары"><span class="title">Ключи газовые КТР омеднен.</span><span class="dop"></span></a><br>
@@ -8,12 +9,6 @@
   <DT>27 мая: <DD><a href="/catalog/cat83.shtml"  title="Новые товары"><span class="title">Ключи разводные изолир.</span><span class="dop"></span></a><br>
   <DT>27 мая: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож изолированный прямой</span><span class="dop"></span></a><br>
   <DT>25 мая: <DD><a href="/catalog/cat244.shtml" title="Новый товар"><span class="title">Штангенциркуль</span><span class="dop"> TRUPER</span></a><br>
-  <DT>20 мая: <DD><a href="/catalog/cat384.shtml" title="Расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"> KAPRO</span></a><br>
-  <DT>19 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика</span><span class="dop"> BLAST</span></a><br>
-  <DT>18 мая: <DD><a href="/catalog/cat464.shtml" title="Новые товары"><span class="title">Смеси для устройства полов</span><span class="dop"></span></a><br>
-  <DT>18 мая: <DD><a href="/catalog/cat463.shtml" title="Новые товары"><span class="title">Гидроизоляционные материалы</span><span class="dop"></span></a><br>
-  <DT>17 мая: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Проникающие смазки</span><span class="dop"></span></a><br>
-  <DT>16 мая: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки</span><span class="dop"> ELASTICA</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
