--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,4 +1,10 @@
 <DT>26 мая: <DD><a href="/catalog/cat183.shtml" title="Значительно расширен ассортимент"><span class="title">Щетки для УШМ и дрели</span><span class="dop"></span></a><br>
+<DT>20 мая: <DD><a href="/catalog/cat384.shtml" title="Расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"> KAPRO</span></a><br>
+<DT>19 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика</span><span class="dop"> BLAST</span></a><br>
+<DT>18 мая: <DD><a href="/catalog/cat464.shtml" title="Новые товары"><span class="title">Смеси для устройства полов</span><span class="dop"></span></a><br>
+<DT>18 мая: <DD><a href="/catalog/cat463.shtml" title="Новые товары"><span class="title">Гидроизоляционные материалы</span><span class="dop"></span></a><br>
+<DT>17 мая: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Проникающие смазки</span><span class="dop"></span></a><br>
+<DT>16 мая: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки</span><span class="dop"> ELASTICA</span></a><br>
 <DT>12 мая: <DD><a href="/catalog/cat461.shtml" title="Расширен ассортимент"><span class="title">Перфолента монтажная</span><span class="dop"></span></a><br>
 <DT>28 апр: <DD><a href="/catalog/cat462.shtml" title="Новые товары"><span class="title">Крепёжные уголки</span><span class="dop"></span></a><br>
 <DT>22 апр: <DD><a href="/catalog/cat461.shtml" title="Новые товары"><span class="title">Лента перфорированная</span><span class="dop">, цинк</span></a><br>
