--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>08 июн: <DD><a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">Болгарки</span></a> и <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a><span class="dop"> <span class="title" title="Новый бренд">Elitech</span></span><br>
   <DT>06 июн: <DD><a href="/catalog/cat467.shtml" title="Новые товары"><span class="title">Битумные мастика и праймер</span><span class="dop"></span></a><br>
   <DT>03 июн: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска сварщ.</span><span class="dop">/автозатемнение</span></a><br>
   <DT>31 мая: <DD><a href="/catalog/cat466.shtml" title="Новые товары"><span class="title">Ломы-гвоздодеры омедненные</span><span class="dop"></span></a><br>
@@ -22,10 +23,6 @@
 	class="dop"> пр-ва з-да СпецЭлектрод</span><span
 	class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
 </table>
-<a href="/catalog/cat47.shtml" title="Буры по бетону для перфоратора SDS Plus UNIVERSE на нашем сайте" style="text-decoration: none"><table cellpadding="0" class="one-good">
-  <tr valign="top"><td align="center" width="1"><img src="/img/pic/drill/small/BURY SDS PLUS.jpg" width="98" alt="" /></td>
-    <td class="good-txt"><p><span class="title">Буры по бетону для перфоратора SDS+</span><span class="dop"> UNIVERSE</span><span class="addt">, повышенной прочности</span></p></td>
-  </tr></table></a>
 <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="lightbox-enabled"
 	href="/img/pic/defence/big/Perchatki%20HB%20s%20PVH.jpg" rel="lightbox"><img
 	src="/img/pic/defence/small/Perchatki%20HB%20s%20PVH.jpg" width="98"
