--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 июн: <DD><a href="/catalog/cat467.shtml" title="Новый товар"><span class="title">Штукатурка - рем.шпаклевка</span><span class="dop"></span></a><br>
   <DT>08 июн: <DD><a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">Болгарки</span></a> и <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a><span class="dop"> <span class="title" title="Новый бренд">Elitech</span></span><br>
   <DT>06 июн: <DD><a href="/catalog/cat467.shtml" title="Новые товары"><span class="title">Битумные мастика и праймер</span><span class="dop"></span></a><br>
   <DT>03 июн: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска сварщ.</span><span class="dop">/автозатемнение</span></a><br>
