--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>17 июн: <DD><a href="/catalog/cat469.shtml" title="Новые товары"><span class="title">Клей строительный</span><span class="dop"> "Мономах"</span></a><br>
+  <DT>16 июн: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт ГФ-021</span><span class="dop"> универсальный</span></a><br>
   <DT>15 июн: <DD><a href="/catalog/cat467.shtml" title="Новый товар"><span class="title">Штукатурка - рем.шпаклевка</span><span class="dop"></span></a><br>
   <DT>08 июн: <DD><a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">Болгарки</span></a> и <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a><span class="dop"> <span class="title" title="Новый бренд">Elitech</span></span><br>
   <DT>06 июн: <DD><a href="/catalog/cat467.shtml" title="Новые товары"><span class="title">Битумные мастика и праймер</span><span class="dop"></span></a><br>
