--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>18 июн: <DD><a href="/catalog/cat457.shtml" title="Расширен ассортимент"><span class="title">Грунт укрепл. и бетоноконтакт</span><span class="dop"></span></a><br>
+  <DT>18 июн: <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Краски водно-дисперсионные</span><span class="dop"></span></a><br>
   <DT>17 июн: <DD><a href="/catalog/cat469.shtml" title="Новые товары"><span class="title">Клей строительный</span><span class="dop"> "Мономах"</span></a><br>
   <DT>16 июн: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт ГФ-021</span><span class="dop"> универсальный</span></a><br>
   <DT>15 июн: <DD><a href="/catalog/cat467.shtml" title="Новый товар"><span class="title">Штукатурка - рем.шпаклевка</span><span class="dop"></span></a><br>
