--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 июн: <DD><a href="/catalog/cat471.shtml" title="Новые товары"><span class="title">Жидкое стекло</span><span class="dop"> "Мономах"</span></a><br>
+  <DT>20 июн: <DD><a href="/catalog/cat470.shtml" title="Новые товары"><span class="title">Огнебиозащита и Антигрибок</span><span class="dop"></span></a><br>
   <DT>18 июн: <DD><a href="/catalog/cat457.shtml" title="Расширен ассортимент"><span class="title">Грунт укрепл. и бетоноконтакт</span><span class="dop"></span></a><br>
   <DT>18 июн: <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Краски водно-дисперсионные</span><span class="dop"></span></a><br>
   <DT>17 июн: <DD><a href="/catalog/cat469.shtml" title="Новые товары"><span class="title">Клей строительный</span><span class="dop"> "Мономах"</span></a><br>
@@ -8,13 +10,6 @@
   <DT>08 июн: <DD><a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">Болгарки</span></a> и <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a><span class="dop"> <span class="title" title="Новый бренд">Elitech</span></span><br>
   <DT>06 июн: <DD><a href="/catalog/cat467.shtml" title="Новые товары"><span class="title">Битумные мастика и праймер</span><span class="dop"></span></a><br>
   <DT>03 июн: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска сварщ.</span><span class="dop">/автозатемнение</span></a><br>
-  <DT>31 мая: <DD><a href="/catalog/cat466.shtml" title="Новые товары"><span class="title">Ломы-гвоздодеры омедненные</span><span class="dop"></span></a><br>
-  <DT>31 мая: <DD><a href="/catalog/cat465.shtml" title="Новые товары"><span class="title">Ключи газовые КТР омеднен.</span><span class="dop"></span></a><br>
-  <DT>30 мая: <DD><a href="/catalog/cat175.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Пена монтажная</span><span class="dop"> V6 всесезонная</span></a><br>
-  <DT>28 мая: <DD><a href="/catalog/cat128.shtml" title="Новый товар"><span class="title">Ножовка</span><span class="dop"> по фанере и ДСП</span></a><br>
-  <DT>27 мая: <DD><a href="/catalog/cat83.shtml"  title="Новые товары"><span class="title">Ключи разводные изолир.</span><span class="dop"></span></a><br>
-  <DT>27 мая: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож изолированный прямой</span><span class="dop"></span></a><br>
-  <DT>25 мая: <DD><a href="/catalog/cat244.shtml" title="Новый товар"><span class="title">Штангенциркуль</span><span class="dop"> TRUPER</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
