--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,4 +1,11 @@
+<DT>31 мая: <DD><a href="/catalog/cat466.shtml" title="Новые товары"><span class="title">Ломы-гвоздодеры омедненные</span><span class="dop"></span></a><br>
+<DT>31 мая: <DD><a href="/catalog/cat465.shtml" title="Новые товары"><span class="title">Ключи газовые КТР омеднен.</span><span class="dop"></span></a><br>
+<DT>30 мая: <DD><a href="/catalog/cat175.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Пена монтажная</span><span class="dop"> V6 всесезонная</span></a><br>
+<DT>28 мая: <DD><a href="/catalog/cat128.shtml" title="Новый товар"><span class="title">Ножовка</span><span class="dop"> по фанере и ДСП</span></a><br>
+<DT>27 мая: <DD><a href="/catalog/cat83.shtml"  title="Новые товары"><span class="title">Ключи разводные изолир.</span><span class="dop"></span></a><br>
+<DT>27 мая: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож изолированный прямой</span><span class="dop"></span></a><br>
 <DT>26 мая: <DD><a href="/catalog/cat183.shtml" title="Значительно расширен ассортимент"><span class="title">Щетки для УШМ и дрели</span><span class="dop"></span></a><br>
+<DT>25 мая: <DD><a href="/catalog/cat244.shtml" title="Новый товар"><span class="title">Штангенциркуль</span><span class="dop"> TRUPER</span></a><br>
 <DT>20 мая: <DD><a href="/catalog/cat384.shtml" title="Расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"> KAPRO</span></a><br>
 <DT>19 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика</span><span class="dop"> BLAST</span></a><br>
 <DT>18 мая: <DD><a href="/catalog/cat464.shtml" title="Новые товары"><span class="title">Смеси для устройства полов</span><span class="dop"></span></a><br>
