1st on amd-win-10

--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -8,12 +8,29 @@
 <DL><DT>П:<DD>0<DT>О:<DD>0</DL>
 </span></p><UL><LI>.</UL><p><span class="addt">
  <span class=art>арт. </span>
+<b>Цена за упаковку 10 штук.</b>
+<abbr title="м">П</abbr>
 <table cellpadding=0 cellspacing=0 border=0><tr><td>красный<td class=art>арт. 2</table>
 {obj_fld}{51}{42}
 {obj_fld}{51}{14}{18}
 {obj_fld}{66}{51}{42}
 {obj_fld}{51}{14}{18}{45}
 {obj_fld}{51}{70}
+==============================
+Альтернативный шаблон:
+<table class="ref"><tr><td>{REL_CAT}</table>
+<div class="ref">{REL_CAT}</div>
+Свойства для сортировки - №№ категорий:
+{1,2,3}
+==============================
+{obj_fld}{51}{79}{42}
+<br><br><a href="/catalog/cat490.shtml">РАСПРОДАЖА строительных рулеток!</a>
+<br><b>Распродажа ограничена количеством товара на складе, оно указано в графе "Доступно".</b>
+<br>Основной ассортимент строительных рулеток представлен <a href="/catalog/cat72.shtml">здесь</a>.
+<div class="ref">РАСПРОДАЖА строительных рулеток!{REL_CAT}</div>
+<p><b>РАСПРОДАЖА кистей плоских!</b></p>
+РАСПРОДАЖА 1
+==============================
 
 <LI>Имеется <a href="pdf" target=_blank title="Документ PDF">руководство по эксплуатации</a>.</LI>
 <br>Имеется <a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank title="Документ PDF">сертификат пожарной безопасности</a>.</span></p></td><td align=center><a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank><img style="border:none" src=/img/pic/foam/small/Cert_Profpur.JPG title="Картинка: Сертификат пожарной безопасности"></a><p><span>
@@ -37,6 +54,9 @@
 
 <br>Основной ассортимент буров SDS plus представлен на странице буров <a href="/catalog/cat47.shtml">BERGEN</a>.
 <br>Основной ассортимент буров SDS Max представлен на страницах буров <a href="/catalog/cat302.shtml">RENNBOHR</a> и <a href="/catalog/cat48.shtml">BERGEN</a>.
+<br>Основной ассортимент строительных уровней представлен <a href="/catalog/cat243.shtml">здесь</a>.
+<br>Основной ассортимент строительных рулеток представлен <a href="/catalog/cat72.shtml">здесь</a>.
+<br>Основной ассортимент красок и колеров представлен <a href="/catalog/cat304.shtml">здесь</a>.
 
 ============================== Settings.nds_info ==============================
 <span class="nds">Все цены указаны с учетом НДС и актуальны на {DATE}.</span>
@@ -189,6 +209,36 @@ Lorem ipsum dolor sit amet, <span class="">
   <title></title>
 </head>
 <body>
+<div id="page"><div class="logo"><span class="new"></span>
+  ul>li.item{Txt$}*5
+  <ul>
+    <li id="">asd</li>
+    <li></li>
+  </ul>
+  <table>
+    <tr>
+      <td>
+        table[cellpadding=20 cellspacing=0]>#*5>[colspan=2]{cell$ of 5}
+      </td>
+    </tr>
+  </table>
+  ul>li[title=$#]*>{$#}+img[alt=$#]
+  voluptatum
+  Very commonly,
+  web-developers will need
+  to wrap text in HTML tags.
+  For example, you may receive
+  a text document from your client
+  and need to wrap
+
+<div class="norow"></div>
+
+<!-- /.new --><ul id="navigation"><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li><li><a href=""></a></li></ul>
+<!-- /#navigation --></div>
+<!-- /.logo --></div>
+<!-- /#page -->
+<a href="http://www.jetbrains.com"></a>
+<a href="http://www.jetbrains.com"></a>
 hi &lt;strong&gt;&lt;/strong&gt;
 &lt;strong&gt;&lt;/strong&gt;
 </body>
@@ -208,3 +258,6 @@ qq qqq &ensp;
 <a href="q"></a>
 &nbsp2; &n co &mdash; z
 "Windows socket error" WSAECONNREFUSED
+</span><span class="for">
+
+
