--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -11,37 +11,59 @@
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
-  <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="cboxElement"
-                                                                                         href="/img/pic/eld/small/specelectrod4-1-200.JPG"><img
-    src="/img/pic/eld/small/specelectrod4-1.JPG" width="98"
-    title="Электроды сварочные"></a></td>
-    <td class="good-txt"><a href="/catalog/cat45.shtml"
-                            title="Электроды сварочные на нашем сайте"><p><span
-      class="title">Электроды сварочные</span><span
-      class="dop"> пр-ва з-да СпецЭлектрод</span><span
-      class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/eld/small/specelectrod4-1-200.JPG"><img
+        src="/img/pic/eld/small/specelectrod4-1.JPG" width="98"
+        title="Электроды сварочные"></a></td>
+      <td class="good-txt"><a href="/catalog/cat45.shtml"
+        title="Электроды сварочные на нашем сайте"><p><span
+        class="title">Электроды сварочные</span><span
+        class="dop"> пр-ва з-да СпецЭлектрод</span><span
+        class="addt">,<br>&empty; от 2.0 до 5.0 мм</span></p></a>
   </table>
-  <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="cboxElement"
-                                                                                         href="/img/pic/defence/big/Perchatki%20HB%20s%20PVH.jpg"><img
-    src="/img/pic/defence/small/Perchatki%20HB%20s%20PVH.jpg" width="98"
-    title="Большое фото: Перчатки Х/Б с нанесением ПВХ"></a></td>
-    <td class="good-txt"><a href="/catalog/cat86.shtml"
-                            title="Перчатки ХБ с ПВХ и латексным покрытием на нашем сайте"><p><span
-      class="title">Перчатки Х/Б с&nbsp;нанесением&nbsp;ПВХ</span><span
-      class="dop"><br>Эконом,<br>Профи,<br>Люкс</span></p></a>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/defence/big/Perchatki%20HB%20s%20PVH.jpg"><img
+        src="/img/pic/defence/small/Perchatki%20HB%20s%20PVH.jpg" width="98"
+        title="Большое фото: Перчатки Х/Б с нанесением ПВХ"></a></td>
+      <td class="good-txt"><a href="/catalog/cat86.shtml"
+        title="Перчатки ХБ с ПВХ и латексным покрытием на нашем сайте"><p><span
+        class="title">Перчатки Х/Б с&nbsp;нанесением&nbsp;ПВХ</span><span
+        class="dop"><br>Эконом,<br>Профи,<br>Люкс</span></p></a>
   </table>
-  <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="cboxElement"
-                                                                                         href="/img/pic/abraz/big/Krug%20Luga.jpg"><img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"
-                                                                                                                                        title="Большое фото: Круги отрезные по металлу (Луга)"></a></td>
-    <td class="good-txt"><a href="/catalog/cat24.shtml"
-                            title="Круги отрезные по металлу (Луга) на нашем сайте"><p><span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода)</span><span class="addt">,<br>разные размеры</span></p></a>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/abraz/big/Krug%20Luga.jpg"><img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"
+        title="Большое фото: Круги отрезные по металлу (Луга)"></a></td>
+      <td class="good-txt"><a href="/catalog/cat24.shtml"
+        title="Круги отрезные по металлу (Луга) на нашем сайте"><p>
+        <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода)</span><span class="addt">,<br>разные размеры</span>
+      </p></a>
   </table>
-  <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="cboxElement" href="/img/pic/drill/big/2204-61.jpg" title="Большое фото: Буры по бетону КРЕСТОВЫЕ для перфоратора SDS Plus GR&ouml;NE (ГРЁН), Польша"><img src="/img/pic/drill/small/2204-61.jpg" width="98"></a></td>
-    <td class="good-txt"><a href="/catalog/cat478.shtml" title="Буры по бетону КРЕСТОВЫЕ для перфоратора SDS Plus GR&ouml;NE (ГРЁН), Польша на нашем сайте"><p><span class="title">Буры по бетону КРЕСТОВЫЕ SDS+</span><span class="dop"><br>GR&ouml;NE (ГРЁН), Польша</span></p></a>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1>
+        <a class="cboxElement" href="/img/pic/drill/big/2204-61.jpg" title="Большое фото: Буры по бетону КРЕСТОВЫЕ для перфоратора SDS Plus GR&ouml;NE (ГРЁН), Польша"><img src="/img/pic/drill/small/2204-61.jpg" width="98"></a>
+      </td>
+      <td class="good-txt">
+        <a href="/catalog/cat478.shtml" title="Буры по бетону КРЕСТОВЫЕ для перфоратора SDS Plus GR&ouml;NE (ГРЁН), Польша на нашем сайте">
+          <p>
+            <span class="title">Буры по бетону КРЕСТОВЫЕ SDS+</span><span class="dop"><br>GR&ouml;NE (ГРЁН), Польша</span>
+          </p></a>
   </table>
-  <table class="one-good" cellpadding="0"><tr valign="top"><td align="center" width=1><a class="cboxElement"
-                                                                                         href="/img/pic/shmal/big/0110-22.jpg" title="Большое фото: Профессиональные ФАСАДНЫЕ валики HARDY (Польша)"><img src="/img/pic/shmal/small/0110-22.jpg" width="98"></a></td>
-    <td class="good-txt"><a href="/catalog/cat63.shtml"
-                            title="Профессиональные ФАСАДНЫЕ валики HARDY (Польша) на нашем сайте"><p><span class="title">Профессиональные ФАСАДНЫЕ валики</span><span class="dop"><br>HARDY (Польша)</span></p></a>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/shmal/big/0110-22.jpg" title="Большое фото: Профессиональные ФАСАДНЫЕ валики HARDY (Польша)"><img src="/img/pic/shmal/small/0110-22.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat63.shtml"
+        title="Профессиональные ФАСАДНЫЕ валики HARDY (Польша) на нашем сайте">
+        <p>
+          <span class="title">Профессиональные ФАСАДНЫЕ валики</span><span class="dop"><br>HARDY (Польша)</span>
+        </p></a>
   </table>
 </div>
